--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,3 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended",
-    "group:all"
-  ]
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json"
 }
